# voxel-platformer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  vpg.cfg
assets/: base_16.vox  base_32.vox  base_8.vox  base_8_32.vox  bullet.vox  end_base.vox  end_message.vox  exit_sign.vox  grass_16.vox  grass_32.vox  jumper.vox  keyboard.vox  player.vox  tree_1.vox  turret.vox
data/: assets.cfg
data/model/: base_16.qb  base_32.qb  base_8.qb  base_8_32.qb  bullet.qb  chr_knight.qb  chr_sword.qb  dog.qb  end_base.qb  end_message.qb  floor.qb  grass_16.qb  grass_32.qb  jumper_8.qb  keyboard.qb  monu10.qb  sign.qb  teapot.qb  tower_16.qb  tower_32.qb  tower_4.qb  tower_8.qb  tree_1.qb  turret.qb
data/model/player/: lfoot.qb  lhand.qb  rfoot.qb  rhand.qb  torso.qb
data/scene/: base_32.scn  base_8_32.scn  bullet.scn  end_message.scn  entry.scn  exit.scn  grass_1_16.scn  jumper_8.scn  main.scn  platform.scn  platform_8.scn  platform_8_32.scn  player.scn  test.scn  turret.scn  tutorial.scn  wall_8_32.scn
data/shader/: gbuffer.frag  lighting.frag  mesh.frag  mesh.vert  model.frag  model.vert  screen_quad.vert  ssao.frag  ssao_blur.frag
data/text/: portuguese.csv
src/game/: bullet.cpp  bullet.hpp  camera_controller.cpp  camera_controller.hpp  config.cpp  entry.cpp  jumper.cpp  jumper.hpp  load.cpp  manager.cpp  manager.hpp  map_controller.cpp  map_controller.hpp  platform.cpp  platform.hpp  player_controller.cpp  player_controller.hpp  player_instance.cpp  player_instance.hpp  turret.cpp  turret.hpp
src/vpg/: config.cpp  config.hpp  endianness.hpp  entry.cpp  event.hpp
src/vpg/data/: asset.cpp  asset.hpp  handle.cpp  handle.hpp  manager.cpp  manager.hpp  model.cpp  model.hpp  qb_parser.cpp  qb_parser.hpp  shader.cpp  shader.hpp  text.cpp  text.hpp
src/vpg/ecs/: behaviour.cpp  behaviour.hpp  component.hpp  component_array.hpp  component_manager.cpp  component_manager.hpp  coordinator.cpp  coordinator.hpp  entity_manager.cpp  entity_manager.hpp  scene.cpp  scene.hpp  system_manager.cpp  system_manager.hpp  transform.cpp  transform.hpp
src/vpg/gl/: camera.cpp  camera.hpp  debug.cpp  debug.hpp  index_buffer.cpp  index_buffer.hpp  light.cpp  light.hpp  matrix.cpp  matrix.hpp  mesh.cpp  mesh.hpp  palette.cpp  palette.hpp  renderable.cpp  renderable.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  usage.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/vpg/input/: keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  window.cpp  window.hpp
src/vpg/memory/: endianness.hpp  pool.cpp  pool.hpp  std_stream_buffer.cpp  std_stream_buffer.hpp  stream.cpp  stream.hpp  stream_buffer.hpp  string_stream_buffer.cpp  string_stream_buffer.hpp  text_stream.cpp  text_stream.hpp
src/vpg/physics/: aabb.cpp  aabb.hpp  collider.cpp  collider.hpp  manifold.hpp  sphere.cpp  sphere.hpp
